--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dart.flutterSdkPath": "C:\\devTools\\flutter"
+    "dart.flutterSdkPath": "C:\\devTools\\flutter",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
