--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   fluentui_icons: ^1.0.0
   gap: ^3.0.1
+  appwrite: ^13.1.0
+  flutter_otp_text_field: ^1.1.0+2
 
 dev_dependencies:
   flutter_test:
