--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   appwrite: 13.0.0
   flutter_otp_text_field: ^1.1.0+2
   flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
